# term-graph

./: Dockerfile  LICENSE  README.md  nginx.conf  nginx.sh  stack.yaml  term-graph.cabal
src/: Main.hs  TermGraph.hs
